# livrero

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260624_0001_initial_auth_tables.py  20260624_1740_f1318b725bba_create_books.py  20260624_1840_6b84659de5d7_add_optional_book_fields.py  20260625_0027_d4416611cdb1_add_soft_delete_to_books.py  20260625_0042_82f68a460641_add_isbn_to_books.py  20260625_0054_57f9eac257da_create_reading_sessions.py  20260625_1621_9808c38d53c6_add_readingnote_model.py  20260625_1733_2390d258881d_add_genres_and_rating_to_books.py  20260706_1200_b7c1e2d3f4a5_create_reading_goals.py  20260709_1200_c3d4e5f6a7b8_fix_books_schema.py  20260717_1000_c8d2e3f4a5b6_add_finished_reading_at_to_books.py  20260718_1200_a1b2c3d4e5f6_merge_heads.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/application/: __init__.py
apps/api/app/domain/: __init__.py
apps/api/app/infrastructure/: __init__.py
apps/api/app/shared/: __init__.py  exceptions.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: __init__.py  test_auth.py  test_auth_advanced.py  test_books.py  test_dashboard.py  test_goals.py  test_notes.py  test_sessions.py
apps/api/tests/unit/: test_book_repository.py  test_dashboard_stats.py  test_forgot_password.py  test_jwt_service.py  test_login_user.py  test_logout_user.py  test_manage_books.py  test_manage_goals.py  test_manage_notes.py  (+11 more)
(+171 files in other folders)
